[tool.poetry]
name = "jumpstand-plots"
version = "0.1.0"
description = "Plot jumpstand stacked bars and double pie charts plots"
authors = ["gschliszka <schgazsi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.3"
numpy = "^1.25.1"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
