[tool.poetry]
name = "jumpstand-plots"
version = "0.1.0"
description = "Plot jumpstand stacked bars and double pie charts plots"
authors = ["gschliszka <schgazsi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
numpy = "^1.23"
matplotlib = "^3.7.2"
lickometer = {git = "https://github.com/hillierdani/lickometer", rev = "converge_into_package"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
